# mediasfu-mediasoup-client-android

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle  gradle.properties  gradle.properties.template
mediasoup-client/: CMakeLists.txt  build.gradle
mediasoup-client/src/androidTest/java/org/mediasoup/droid/: MediasoupClientTest.java
mediasoup-client/src/main/jni/: consumer_jni.cpp  data_consumer_jni.cpp  data_producer_jni.cpp  device_jni.cpp  java_types.cpp  jni_onload.cpp  logger_jni.cpp  mediasoup_client_jni.cpp  peerconnection_jni.cpp  producer_jni.cpp  scoped_java_ref.cpp  transport_jni.cpp
mediasoup-client/src/main/jni/include/: consumer_jni.h  data_consumer_jni.h  data_producer_jni.h  java_types.h  producer_jni.h  scoped_java_ref.h  transport_jni.h
